@@ -24,11 +24,10 @@ let is_int = new_definition
 (* ------------------------------------------------------------------------- *)
 
 let int_abstr,int_rep =
-  let int_tybij =
-    new_type_definition "int" ("int_of_real","real_of_int")
+  (SPEC_ALL F_F SPEC_ALL) (CONJ_PAIR
+   (new_type_definition "int" ("int_of_real","real_of_int")
     (prove(`?x. is_int x`,EXISTS_TAC `&0` THEN
-     REWRITE_TAC[is_int; REAL_OF_NUM_EQ; EXISTS_OR_THM; GSYM EXISTS_REFL])) in
-  SPEC_ALL(CONJUNCT1 int_tybij),SPEC_ALL(CONJUNCT2 int_tybij);;
+     REWRITE_TAC[is_int; REAL_OF_NUM_EQ; EXISTS_OR_THM; GSYM EXISTS_REFL]))));;
 
 let dest_int_rep = prove
  (`!i. ?n. (real_of_int i = &n) \/ (real_of_int i = --(&n))`,
